[#1622] Careful, but thorough review of (un)registration task synchronization. All Whiteboard tests work after making Aries-CDI work