@@ -32,6 +32,7 @@ import org.ops4j.pax.web.itest.AbstractControlledTestBase;
 import org.ops4j.pax.web.itest.utils.client.HttpTestClient;
 import org.ops4j.pax.web.itest.utils.client.HttpTestClientFactory;
 
+import static org.ops4j.pax.exam.Constants.START_LEVEL_TEST_BUNDLE;
 import static org.ops4j.pax.exam.CoreOptions.frameworkProperty;
 import static org.ops4j.pax.exam.CoreOptions.maven;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
@@ -41,6 +42,7 @@ import static org.ops4j.pax.exam.CoreOptions.systemTimeout;
 import static org.ops4j.pax.exam.CoreOptions.when;
 import static org.ops4j.pax.exam.OptionUtils.combine;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.configureConsole;
+import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.editConfigurationFileExtend;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.editConfigurationFilePut;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.features;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.karafDistributionConfiguration;
@@ -96,6 +98,7 @@ public class AbstractKarafTestBase extends AbstractControlledTestBase {
 					new VMOption("lib/jdk9plus/*" + File.pathSeparator + "lib/boot/*"),
 					new VMOption("--add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED"),
 					new VMOption("--add-opens=java.base/java.net=ALL-UNNAMED"),
+					new VMOption("--add-opens=java.base/java.lang=ALL-UNNAMED"),
 					new VMOption("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"),
 					new VMOption("--add-opens=java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED"),
 					new VMOption("--add-opens=java.rmi/sun.rmi.registry=ALL-UNNAMED"),
@@ -115,7 +118,7 @@ public class AbstractKarafTestBase extends AbstractControlledTestBase {
 						.useDeployFolder(false),
 				new DoNotModifyLogOption(),
 
-//				org.ops4j.pax.exam.karaf.options.KarafDistributionOption.debugConfiguration("5005", false),
+//				org.ops4j.pax.exam.karaf.options.KarafDistributionOption.debugConfiguration("5005", true),
 
 				configureConsole().ignoreLocalConsole(),
 
@@ -139,6 +142,9 @@ public class AbstractKarafTestBase extends AbstractControlledTestBase {
 				editConfigurationFilePut("etc/custom.properties", "org.ops4j.pax.logging.service.frameworkEventsLogLevel", "DISABLED"),
 				editConfigurationFilePut("etc/custom.properties", "org.ops4j.pax.logging.useFileLogFallback", defaultsLogFileName),
 				editConfigurationFilePut("etc/custom.properties", "org.ops4j.pax.logging.property.file", osgiLogFileName),
+				editConfigurationFileExtend("etc/config.properties", "karaf-capabilities",
+						"osgi.contract;osgi.contract=JavaAnnotation;uses:=\"javax.annotation,javax.annotation.sql,javax.annotation.security\";" +
+								"version:List<Version>=\"1.3,1.2,1.1,1.0\""),
 
 				editConfigurationFilePut("etc/branding.properties", "welcome", ""), // No welcome banner
 				editConfigurationFilePut("etc/branding-ssh.properties", "welcome", ""),
@@ -160,7 +166,7 @@ public class AbstractKarafTestBase extends AbstractControlledTestBase {
 				replaceConfigurationFile("etc/keystore", new File("../etc/security/server.jks")),
 //				replaceConfigurationFile("/etc/jetty.xml", new File(getClass().getClassLoader().getResource("jetty.xml").getFile())),
 
-				systemProperty("karaf.log.console").value("WARN"),
+				systemProperty("karaf.log.console").value("OFF"),
 				systemProperty("pax-web.version").value(System.getProperty("pax-web.version")),
 
 				// contains private packaged Http Client (non-OSGi HttpClient 5)
@@ -209,6 +215,103 @@ public class AbstractKarafTestBase extends AbstractControlledTestBase {
 	public Option[] undertowConfig() {
 		return combine(baseConfigure(),
 				features(paxWebFeatures, "pax-web-http-undertow", "pax-web-war", "pax-web-whiteboard"));
+	}
+
+	protected Option[] ariesCdiAndMyfaces() {
+		return new Option[] {
+				mavenBundle("jakarta.el", "jakarta.el-api")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.ops4j.pax.web", "pax-web-compatibility-el2")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 2).noStart(),
+				mavenBundle("jakarta.websocket", "jakarta.websocket-api")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				// it has to be CDI 1.2 for Myfaces 2.3.x, but can't conflict with CDI 2.0 needed by aries-cdi
+//				mavenBundle("javax.enterprise", "cdi-api")
+//						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("commons-collections", "commons-collections")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("commons-beanutils", "commons-beanutils")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("commons-digester", "commons-digester")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.myfaces.core", "myfaces-api")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.myfaces.core", "myfaces-impl")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.servicemix.bundles", "org.apache.servicemix.bundles.javax-inject")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 2),
+				mavenBundle("org.ops4j.pax.web", "pax-web-fragment-myfaces-inject")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 2).noStart(),
+				mavenBundle("org.ops4j.pax.web", "pax-web-fragment-myfaces-spifly")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 2).noStart(),
+
+				// These 4 would be required because of osgi.contract capabilities. But Pax Web provides proper
+				// compatibility bundles that fix _canonical_ jakarta API bundles
+//				mavenBundle("org.apache.geronimo.specs", "geronimo-el_2.2_spec")
+//						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+//				mavenBundle("org.apache.geronimo.specs", "geronimo-interceptor_1.2_spec")
+//						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+//				mavenBundle("org.apache.geronimo.specs", "geronimo-jcdi_2.0_spec")
+//						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+//				mavenBundle("org.apache.geronimo.specs", "geronimo-annotation_1.3_spec")
+//						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+
+				mavenBundle("jakarta.enterprise", "jakarta.enterprise.cdi-api")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1).noStart(),
+				mavenBundle("org.ops4j.pax.web", "pax-web-compatibility-cdi12")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 2).noStart(),
+				mavenBundle("jakarta.interceptor", "jakarta.interceptor-api")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.ops4j.pax.web", "pax-web-compatibility-interceptor12")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 2).noStart(),
+				// Aries CDI extension.servlet.weld and extension.el.jsp require JavaServlet 3.1 capability...
+				mavenBundle("org.ops4j.pax.web", "pax-web-compatibility-servlet31")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1).noStart(),
+
+				mavenBundle("org.osgi", "org.osgi.service.cdi")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.felix", "org.apache.felix.converter")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.spi")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.extension.spi")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.extender")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.weld")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.extension.servlet.common")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.extension.servlet.weld")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.extension.el.jsp")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.apache.aries.cdi", "org.apache.aries.cdi.extra")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.jboss.weld", "weld-osgi-bundle")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.jboss.classfilewriter", "jboss-classfilewriter")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+
+				mavenBundle("org.apache.aries.spifly", "org.apache.aries.spifly.dynamic.bundle")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.ow2.asm", "asm")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.ow2.asm", "asm-commons")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.ow2.asm", "asm-util")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.ow2.asm", "asm-tree")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.ow2.asm", "asm-analysis")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+
+				mavenBundle("jakarta.validation", "jakarta.validation-api")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1),
+				mavenBundle("org.jboss.classfilewriter", "jboss-classfilewriter")
+						.versionAsInProject().startLevel(START_LEVEL_TEST_BUNDLE - 1)
+		};
 	}
 
 	protected static String getMyFacesVersion() {
